Fix nav not fixed on mobile

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -341,6 +341,7 @@ section
         fill: $white
 @media only screen and (max-width: 850px)
   nav
+    position: sticky
     background-color: $black
     border-top: 1px solid $light-red
     bottom: 0
